<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item
            android:id="@+id/my_trips"
            android:icon="@drawable/ic_my_travels"
            android:title="@string/myTrips" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/my_account"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/myAccount" />
        <item
            android:id="@+id/become_well_known_user"
            android:icon="@drawable/ic_verified_user_black_24dp"
            android:title="@string/becomeWellKnown" />
        </group>
        <group android:checkableBehavior="single"
            android:id="@+id/group3"  >
        <item
            android:id="@+id/news"
            android:icon="@drawable/ic_news_24dp"
            android:title="@string/news" />

        <item
            android:id="@+id/guide"
            android:icon="@drawable/ic_user_guide_24dp"
            android:title="@string/guide" />
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_contact_us_24dp"
            android:title="@string/contactUs" />
    </group>




</menu>
