<?xml version="1.0" encoding="utf-8"?>




    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wellKnownDescription"
            android:gravity="center_vertical|center_horizontal"
            android:id="@+id/textView" />

        <TextView
            android:text="@string/passengerItem2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:id="@+id/textView3"
            android:layout_alignEnd="@+id/textView2"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignRight="@+id/textView2" />

        <TextView
            android:text="@string/passengerItem3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:id="@+id/textView4"
            android:layout_alignEnd="@+id/textView3"
            android:layout_alignRight="@+id/textView3" />

        <TextView
            android:text="@string/driverItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:id="@+id/textView5"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/textView4"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/textView4" />

        <TextView
            android:text="@string/driverItemsPlus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:id="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/textView5" />

        <TextView
            android:text="@string/justForPassenger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentEnd="true"
            android:id="@+id/textView7"
            android:layout_alignParentRight="true" />

        <TextView
            android:text="@string/passengerItem1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView7"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/textView7"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/textView7" />

        <TextView
            android:text="@string/driverItem4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:id="@+id/textView8"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView6"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView6" />

        <TextView
            android:text="@string/driverItem5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:id="@+id/textView9"
            android:layout_alignEnd="@+id/textView8"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView8"
            android:layout_alignParentLeft="true" />

        <TextView
            android:text="@string/driverItem6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView9"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView9"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView9" />

        <TextView
            android:text="@string/driverItem7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:id="@+id/textView11"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView10"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/textView10" />

        <TextView
            android:text="@string/driverItem8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView11"
            android:id="@+id/textView12"
            android:layout_alignEnd="@+id/textView11"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView11"
            android:layout_alignParentLeft="true" />

        <TextView
            android:text="@string/descriptionOfItems"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_marginTop="25dp"
            android:id="@+id/textView13"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical|center_horizontal"
            android:layout_alignParentRight="true"
            android:layout_alignParentLeft="true" />

        <Button
            android:text="@string/enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:elevation="0dp"
            android:background="@drawable/button"
            android:layout_marginTop="18dp"
            android:layout_below="@+id/textView13"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>




