<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="5dp"
        android:id="@+id/switch1"
        android:layout_alignParentLeft="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch1"
        android:padding="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:id="@+id/switch2"
        android:layout_alignParentLeft="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch3"
        android:padding="5dp"
        android:layout_below="@+id/switch2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/sameGenderAsMe" />



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/searchUntiTrip" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/switch3"
        android:layout_alignBottom="@+id/switch3"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/onlyWellKnownDrivers" />


    <View
        android:layout_width="match_parent"
        android:id="@+id/line1"
        android:layout_height="1dp"
        android:layout_below="@+id/textView3"
        android:layout_margin="25dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:text="@string/zoomTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:text="@string/zoomDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView5"
        android:gravity="center_vertical|center_horizontal" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:progress="5"
        android:id="@+id/seekBar2"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        style="@android:style/Widget.DeviceDefault.Light.SeekBar"
        android:scrollbarSize="12dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:text="@string/moreZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seekBar2"
        android:layout_alignParentEnd="true"
        android:id="@+id/textView6"
        android:layout_alignParentRight="true" />

    <TextView
        android:text="@string/lessZoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentStart="true"
        android:id="@+id/textView7"
        android:layout_alignParentLeft="true" />

    <Button
        android:text="@string/srcDst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:id="@+id/button"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        />

    <Button
        android:id="@+id/timedatebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button"
        android:layout_marginTop="14dp"
        android:background="@drawable/button"
        android:text="@string/timeData"
       />







    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:id="@+id/registerbutton"
        android:text="@string/registerTrip"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>