<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/submitYourMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView14"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:ems="10"
        android:id="@+id/editText7"
        android:layout_above="@+id/button3"
        android:layout_marginBottom="44dp"
        android:layout_below="@+id/textView14"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hintOfContactUs"
        android:textSize="12sp"
        android:gravity="bottom" />

    <Button
        android:text="@string/register"
        android:background="@drawable/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button3" />
</RelativeLayout>
